log
Sun 14 May 2023 12:19:42 AM UTC: 
 tests:  0|4
total_score: 0/70
27b434f
Sun 14 May 2023 12:23:42 AM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capc’; did you mean ‘capac’?
   40 |   auxM->capc = 3;
      |         ^~~~
      |         capac
Compilation failed
bdb4992
Sun 14 May 2023 12:23:47 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5a23ac8
Sun 14 May 2023 12:25:58 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:13: error: implicit declaration of function ‘createheap’; did you mean ‘createHeap’? [-Werror=implicit-function-declaration]
   38 |   Heap *h = createheap();
      |             ^~~~~~~~~~
      |             createHeap
heap.c:38:13: error: initialization of ‘Heap *’ {aka ‘struct Heap *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
heap.c:41:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capc’; did you mean ‘capac’?
   41 |   auxM->capc = 3;
      |         ^~~~
      |         capac
heap.c:42:4: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘data’
   42 |   h->data = NULL;
      |    ^~
heap.c:43:4: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   43 |   h->priority = 0;
      |    ^~
cc1: all warnings being treated as errors
Compilation failed
269074a
Sun 14 May 2023 12:26:07 AM UTC: 
 heap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:13: error: implicit declaration of function ‘createheap’; did you mean ‘createHeap’? [-Werror=implicit-function-declaration]
   38 |   Heap *h = createheap();
      |             ^~~~~~~~~~
      |             createHeap
heap.c:38:13: error: initialization of ‘Heap *’ {aka ‘struct Heap *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
heap.c:41:4: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘data’
   41 |   h->data = NULL;
      |    ^~
heap.c:42:4: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   42 |   h->priority = 0;
      |    ^~
heap.c:44:10: error: ‘auxM’ undeclared (first use in this function)
   44 |   return auxM;
      |          ^~~~
heap.c:44:10: note: each undeclared identifier is reported only once for each function it appears in
heap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f78285b
Sun 14 May 2023 12:29:10 AM UTC: 
 heap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capc’; did you mean ‘capac’?
   41 |   auxM->capc = 3;
      |         ^~~~
      |         capac
Compilation failed
6d79c3b
Sun 14 May 2023 12:29:16 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
bfa164e
Sun 14 May 2023 12:32:11 AM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
055cc8d
Sun 14 May 2023 12:40:31 AM UTC: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:36:5: error: ‘pc’ undeclared (first use in this function); did you mean ‘pq’?
   36 |     pc->capac *=2;
      |     ^~
      |     pq
heap.c:36:5: note: each undeclared identifier is reported only once for each function it appears in
heap.c:37:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘heapArrar’; did you mean ‘heapArray’?
   37 |     pq->heapArrar = realloc(pq->HeapArray,pq->capac * sizeof(heapElem));
      |         ^~~~~~~~~
      |         heapArray
heap.c:37:33: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArray’; did you mean ‘heapArray’?
   37 |     pq->heapArrar = realloc(pq->HeapArray,pq->capac * sizeof(heapElem));
      |                                 ^~~~~~~~~
      |                                 heapArray
Compilation failed
92f3a11
Sun 14 May 2023 12:40:39 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:36:5: error: ‘pc’ undeclared (first use in this function); did you mean ‘pq’?
   36 |     pc->capac *=2;
      |     ^~
      |     pq
heap.c:36:5: note: each undeclared identifier is reported only once for each function it appears in
heap.c:37:33: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArray’; did you mean ‘heapArray’?
   37 |     pq->heapArray = realloc(pq->HeapArray,pq->capac * sizeof(heapElem));
      |                                 ^~~~~~~~~
      |                                 heapArray
Compilation failed
b25eec6
Sun 14 May 2023 12:40:46 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:33: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArray’; did you mean ‘heapArray’?
   37 |     pq->heapArray = realloc(pq->HeapArray,pq->capac * sizeof(heapElem));
      |                                 ^~~~~~~~~
      |                                 heapArray
Compilation failed
75fa2e4
Sun 14 May 2023 12:40:53 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
4efa4b6
Sun 14 May 2023 12:46:36 AM UTC: 
 heap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:38:18: error: ‘pc’ undeclared (first use in this function); did you mean ‘pq’?
   38 |   int posicion = pc->size;
      |                  ^~
      |                  pq
heap.c:38:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8ca501f
Sun 14 May 2023 12:46:47 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
b9d8f6b
Sun 14 May 2023 12:48:00 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|2
total_score: 35/70
4f88715
Sun 14 May 2023 12:48:33 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:34:32: error: expected ‘;’ before ‘pq’
   34 |     pq->capac = pq->capac * 2+1
      |                                ^
      |                                ;
   35 |     pq->heapArray = realloc(pq->heapArray,pq->capac * sizeof(heapElem));
      |     ~~                          
Compilation failed
edd672e
Sun 14 May 2023 12:48:38 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
4f022e1
